--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "python.pythonPath": "C:\\Users\\cheikh_Moctar\\AppData\\Local\\Programs\\Python\\Python37-32\\python.exe"
+    "python.pythonPath": "C:\\Users\\cheikh_Moctar\\AppData\\Local\\Programs\\Python\\Python37-32\\python.exe",
+    "liveServer.settings.port": 5501
 }
